fixed mobile menu overlapping issue

--- a/src/components/MobileNavigation/index.scss
+++ b/src/components/MobileNavigation/index.scss
@@ -6,6 +6,7 @@
   height: 100%;
   background: #FFF;
   box-shadow: 0 0 20px 0 #385098;
+  z-index: 1;
   .mobile-navigation {
     display: flex;
     .sub-menu-wrapper,
